--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
 
 <div id="home">
     <!--Nav-->
-    <nav data-aos="fade-down" data-aos-duration="1000" class="navbar-large navbar navbar-expand-lg navbar-dark bg-dark fixed-top py-4 py-lg-2">
+    <nav data-aos="fade-down" data-aos-duration="1000"
+         class="navbar-large navbar navbar-expand-lg navbar-dark bg-dark fixed-top py-4 py-lg-2">
         <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarTogglerDemo02">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
@@ -49,9 +51,11 @@
         </div>
     </nav>
 
-    <nav data-aos="fade-down" data-aos-duration="1000" class="navbar-small navbar-expand-lg navbar-dark bg-dark fixed-top py-4 py-lg-2">
+    <nav data-aos="fade-down" data-aos-duration="1000"
+         class="navbar-small navbar-expand-lg navbar-dark bg-dark fixed-top py-4 py-lg-2">
         <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarTogglerDemo02">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
@@ -101,7 +105,8 @@
     <div class="row mt-4 align-items-center">
         <div class="col-lg-6 mb-3">
             <figure class="text-center">
-                <img data-aos="fade-right" class="img-fluid mx-auto d-block" src="./content/DevFest.png" alt="Your Image" style="width: 50%">
+                <img data-aos="fade-right" class="img-fluid mx-auto d-block" src="./content/DevFest.png"
+                     alt="Your Image" style="width: 50%">
                 <figcaption class="mt-2 text-muted">Picture of me at Google Devfest 2023</figcaption>
             </figure>
         </div>
@@ -109,9 +114,10 @@
             <h2 data-aos="fade-left" class="align-items-center">Hi there! &#128075;</h2>
             <hr>
             <div data-aos="fade-left">
-                <p class="fs-5">My name is Christos Loucaides, and I am currently in my final year of my degree, BSc
+                <p class="fs-5">My name is Christos Loucaides, and I am a First Class, <a
+                        href="https://www.qmul.ac.uk/undergraduate/coursefinder/courses/2024/computer-science-with-management-itmb/" target="_blank">BSc
                     (Hons) Computer Science
-                    with Management at Queen Mary, University of London.</p>
+                    with Management</a> graduate, from Queen Mary, University of London.</p>
                 <p class="fs-5">I initially built this website as part of my "Fundamentals of Web Technologies module",
                     back in 2020 during my first year of university, but have decided to keep it up to date, in order
                     to showcase some skills and experiences that I've picked up throughout the years.</p>
@@ -224,7 +230,6 @@
         </div>
     </div>
 </div>
-
 
 
 <div class="container-fluid">
