updated ΕΦ logo path

--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
             <hr>
             <div data-aos="fade-left">
                 <p class="fs-5">My name is Christos Loucaides, and I am a First Class, <a
-                        href="https://www.qmul.ac.uk/undergraduate/coursefinder/courses/2024/computer-science-with-management-itmb/" target="_blank">BSc
+                        href="https://www.qmul.ac.uk/undergraduate/coursefinder/courses/2024/computer-science-with-management-itmb/"
+                        target="_blank">BSc
                     (Hons) Computer Science
                     with Management</a> graduate, from Queen Mary, University of London.</p>
                 <p class="fs-5">I initially built this website as part of my "Fundamentals of Web Technologies module",
@@ -214,7 +215,8 @@
                 <div class="content">
                     <h2>Artillery Soldier</h2>
                     <h4 class="time-period">June 2019 - September 2020</h4>
-                    <img src="https://upload.wikimedia.org/wikipedia/el/d/dc/Cypriot_National_Guard_emblem.png" alt=""
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/10/Emblem_of_the_Cypriot_National_Guard.svg/205px-Emblem_of_the_Cypriot_National_Guard.svg.png"
+                         alt=""
                          style="width: 30%;">
                     <hr>
                     <p>
