--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                          style="width: 70%">
                     <hr>
                     <p class="fs-4">
-                        Upon graduating from university, I started working as an engineer at <a href="https://marshmallow.com">Marshmallow</a>, where I currently work
+                        Upon graduating from university, I started working as an engineer at <a href="https://marshmallow.com" target="_blank">Marshmallow</a>, where I currently work
                         in the domain of car insurance renewal. The tech-stack here is Java 21 μServices running on AWS. This is still quite a new role for me, so check
                         back in a few months to see what I've been up to!
                     </p>
