open sky website on new tab

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                          style="width: 50%">
                     <hr>
                     <p class="fs-4">
-                        Secured a year-long internship at <a href="https://www.sky.com/">Sky</a>, where I worked as a
+                        Secured a year-long internship at <a href="https://www.sky.com/" target="_blank">Sky</a>, where I worked as a
                         backend Java developer. I focused on the development and maintenance of greenfield and
                         brownfield backend Java applications, whilst following agile practices such as Kanban, Test
                         Driven Development (TDD/ATDD) and
