replaced contact with linkedin mobile

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <a class="nav-link" href="#skills">Skills</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="mailto:info@chrisloucaides.com">Contact</a>
+                        <a class="nav-link" href="https://www.linkedin.com/in/chrisloucaides/" target="_blank">LinkedIn</a>
                     </li>
                 </ul>
             </div>
