--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     data-bs-target="#navbarTogglerDemo02">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <div class="collapse navbar-collapse" id="">
                 <ul class="navbar-nav mx-auto fs-5">
                     <li class="nav-item">
                         <a class="nav-link" href="#">Home</a>
