removed unused css styling

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script defer src="js/timeline.js"></script>
     <title>Chris Loucaides' Portfolio</title>
 </head>
-<body class="container-fluid p-0">
+<body class="p-0">
 
 <div id="home">
     <!--Nav-->
@@ -265,7 +265,7 @@
                 <h2 data-aos="zoom-in">My current tech-stack 📚</h2>
                 <hr>
                 <p data-aos="fade-up" class="fs-5">While I primarily specialise in backend Java development, I've worked
-                    in a multitude
+                    with a multitude
                     of different languages and frameworks, for both university and personal projects!</p>
                 <br>
                 <h3 data-aos="zoom-in">Web Development 🌐</h3>
