minor content updates

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <h2 data-aos="fade-left" class="align-items-center text-center display-5 font-weight-bold">Hi there! &#128075;</h2>
             <hr>
             <div data-aos="fade-left">
-                <p class="fs-4">My name is Christos Loucaides, and I am a First Class, <a
+                <p class="fs-4">My name is Christos Loucaides, and I am a recent First Class, <a
                         href="https://www.qmul.ac.uk/undergraduate/coursefinder/courses/2024/computer-science-with-management-itmb/"
                         target="_blank">BSc
                     (Hons) Computer Science
@@ -164,7 +164,7 @@
                     <hr>
                     <p class="fs-4">
                         Upon graduating from university, I started working as an engineer at <a href="https://marshmallow.com" target="_blank">Marshmallow</a>, where I currently work
-                        in the domain of car insurance renewal. The tech-stack here is Java 21 μServices running on AWS. This is still quite a new role for me, so check
+                        in the domain of car insurance renewal. The tech-stack here is Java 21 μServices running on AWS Fargate. This is still quite a new role for me, so check
                         back in a few months to see what I've been up to!
                     </p>
                 </div>
