minor content updates

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
                         <a class="nav-link" href="#skills">Skills</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://www.linkedin.com/in/chrisloucaides/" target="_blank">LinkedIn</a>
+                        <a class="nav-link" href="https://www.linkedin.com/in/chrisloucaides/"
+                           target="_blank">LinkedIn</a>
                     </li>
                 </ul>
             </div>
@@ -73,7 +74,8 @@
                         <a class="nav-link" href="#skills">Skills</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://www.linkedin.com/in/chrisloucaides/" target="_blank">LinkedIn</a>
+                        <a class="nav-link" href="https://www.linkedin.com/in/chrisloucaides/"
+                           target="_blank">LinkedIn</a>
                     </li>
                 </ul>
             </div>
@@ -111,7 +113,8 @@
             </figure>
         </div>
         <div class="col-lg-6">
-            <h2 data-aos="fade-left" class="align-items-center text-center display-5 font-weight-bold">Hi there! &#128075;</h2>
+            <h2 data-aos="fade-left" class="align-items-center text-center display-5 font-weight-bold">Hi there!
+                &#128075;</h2>
             <hr>
             <div data-aos="fade-left">
                 <p class="fs-4">My name is Christos Loucaides, and I am a recent First Class, <a
@@ -121,7 +124,10 @@
                     with Management</a> graduate, from Queen Mary, University of London.</p>
                 <p class="fs-4">I initially built this website as part of my "Fundamentals of Web Technologies module",
                     back in 2020 during my first year of university, but have decided to keep it up to date, in order
-                    to showcase some skills and experiences that I've picked up throughout the years.</p>
+                    to showcase some skills and experiences that I've picked up throughout the years. One such example
+                    would be that I've set up a CI/CD pipeline for this site through GitHub actions, meaning all my
+                    changes
+                    are deployed as soon as I hit ctr+shift+k on my <a href="https://www.jetbrains.com/idea/" target="_blank">IDE</a>!</p>
                 <p class="fs-4">Although I consider myself fortunate that programming, one of my hobbies, has become
                     my career, I also find joy in engaging with various other activities during my spare time, such
                     as:</p>
@@ -163,8 +169,10 @@
                          style="width: 70%">
                     <hr>
                     <p class="fs-4">
-                        Upon graduating from university, I started working as an engineer at <a href="https://marshmallow.com" target="_blank">Marshmallow</a>, where I currently work
-                        in the domain of car insurance renewal. The tech-stack here is Java 21 μServices running on AWS Fargate. This is still quite a new role for me, so check
+                        Upon graduating from university, I started working as an engineer at <a
+                            href="https://marshmallow.com" target="_blank">Marshmallow</a>, where I currently work
+                        in the domain of car insurance renewal. The tech-stack here is Java 21 μServices running on AWS
+                        Fargate. This is still quite a new role for me, so check
                         back in a few months to see what I've been up to!
                     </p>
                 </div>
@@ -180,7 +188,8 @@
                          style="width: 50%">
                     <hr>
                     <p class="fs-4">
-                        Secured a year-long internship at <a href="https://www.sky.com/" target="_blank">Sky</a>, where I worked as a
+                        Secured a year-long internship at <a href="https://www.sky.com/" target="_blank">Sky</a>, where
+                        I worked as a
                         backend Java developer. I focused on the development and maintenance of greenfield and
                         brownfield backend Java applications, whilst following agile practices such as Kanban, Test
                         Driven Development (TDD/ATDD) and
